testfx/errors/error_tests/edge_17_mixed_syntax.fx
// 混合多种其他语言语法
let x = 10
const y = 20
var z = 30
function add(a, b) {
    return a + b
}
